Renaming MyEngine to Xanx, and moving it to its own project

--- a/AlienRaid/AlienRaid/AlienRaid.csproj
+++ b/AlienRaid/AlienRaid/AlienRaid.csproj
@@ -110,12 +110,12 @@
     <Compile Include="AlienRaid\HUD.cs" />
     <Compile Include="AlienRaid\Sprites\Player.cs" />
     <Compile Include="AlienRaid\Sprites\Star.cs" />
-    <Compile Include="MyEngine\Component.cs" />
-    <Compile Include="MyEngine\Engine.cs" />
-    <Compile Include="MyEngine\GameScreen.cs" />
-    <Compile Include="MyEngine\IEContentManager.cs" />
-    <Compile Include="MyEngine\Sprite.cs" />
-    <Compile Include="MyEngine\Timer.cs" />
+    <Compile Include="Xanx\Component.cs" />
+    <Compile Include="Xanx\Engine.cs" />
+    <Compile Include="Xanx\GameScreen.cs" />
+    <Compile Include="Xanx\IEContentManager.cs" />
+    <Compile Include="Xanx\Components\Sprite.cs" />
+    <Compile Include="Xanx\Components\Timer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="AlienRaidGame.cs" />
